--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="centralize">
     <form>
-        <h1>Agenda Escolar</h1></p>
+<!--        <h1>Agenda Escolar</h1></p>
         <div class="form-field">
             <div><label>Email</label></div>
             <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()"/>
@@ -34,7 +34,10 @@
         </div>
         <div>
             <button type="button" class="outline" onclick="register()">Registrar</button>
-        </div>
+        </div> -->
+
+        <h1>Site em Manutenção</h1>
+        <img src="logo.png" width="50" height="50">
     </form>
 </body>
 
