--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <button type="button" class="outline" onclick="register()">Registrar</button>
         </div> -->
 
-        <h1>Site em Manutenção</h1>
-        <img src="logo.png" width="200" height="200">
+        <h1 font-size="100".>Site em Manutenção</h1>
+        <img src="logo.png" width="150" height="150">
     </form>
 </body>
 
