--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button type="button" class="outline" onclick="register()">Registrar</button>
         </div> -->
 
-        <h1 font-size="100".>Site em Manutenção</h1>
+        <h1>Site em Manutenção</h1>
         <img src="logo.png" width="150" height="150">
     </form>
 </body>
