--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Paulo José">
-    <meta name="keywords" content="Agenda, Escolar, 2024, Escola, de, Aplicação, Professor, Chaves">
-    <meta name="description" content="Esta é a Agenda Escolar, versão 2024.">
+    <meta name="keywords" content="Agenda, Escolar, 2025, Escola, de, Aplicação, Professor, Chaves">
+    <meta name="description" content="Esta é a Agenda Escolar, versão 2025.">
 
     <link rel="stylesheet" href="global.css">
     <link rel="icon" href="logo.jpg">
@@ -14,7 +14,10 @@
 </head>
 <body class="centralize">
     <form>
-<!--        <h1>Agenda Escolar</h1></p>
+        <img src="EAPC.png" width="60px" height="60px" style="margin-top: 10px; margin-right: 10px;">
+        <img src="logo.png" width="60px" height="60px" style="margin-top: 10px; margin-left: 10px;">
+
+        <h1 style="margin-top: 15px; margin-bottom: 10px;">Agenda Escolar</h1>
         <div class="form-field">
             <div><label>Email</label></div>
             <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()"/>
@@ -34,10 +37,7 @@
         </div>
         <div>
             <button type="button" class="outline" onclick="register()">Registrar</button>
-        </div> -->
-
-        <h1>Site em Manutenção</h1>
-        <img src="logo.png" width="150" height="150">
+        </div>
     </form>
 </body>
 
