--- a/pages/home/bimestre1/index.html
+++ b/pages/home/bimestre1/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Paulo José">
-    <meta name="keywords" content="Agenda, Escolar, 2024, Escola, de, Aplicação, Professor, Chaves">
-    <meta name="description" content="Esta é a Agenda Escolar, versão 2024.">
+    <meta name="keywords" content="Agenda, Escolar, 2025, Escola, de, Aplicação, Professor, Chaves">
+    <meta name="description" content="Esta é a Agenda Escolar, versão 2025.">
     
     <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="../style.css">
@@ -17,13 +17,13 @@
     <header>
         <nav>
             <button class="button-with-image" onclick="comeback()"><img src="../voltar.png" alt="Voltar"></button>
-            <h1>Agenda Escolar 2024</h1>
+            <h1>Agenda Escolar 2025</h1>
         </nav>
     </header>
 
     <nav id="bimestre1" class="bimestre">
         <div>
-            <h1>1º Bimestre</h1>
+            <h1>1º Trimestre</h1>
         </div>
         <table>
             <thead>
@@ -78,12 +78,8 @@
                     <td><input id="quin1" type="text" value="0.0"></input><input id="quin2" type="text" value="0.0"></input><p id="quimb">0.0</p></td>
                 </tr>
                 <tr>
-                    <td>Eletiva</td>
-                    <td><input id="elen1" type="text" value="0.0"></input><input id="elen2" type="text" value="0.0"></input><p id="elemb">0.0</p></td>
-                </tr>
-                <tr>
-                    <td>Investigação Científica</td>
-                    <td><input id="invn1" type="text" value="0.0"></input><input id="invn2" type="text" value="0.0"></input><p id="invmb">0.0</p></td>
+                    <td>Sociologia</td>
+                    <td><input id="socn1" type="text" value="0.0"></input><input id="socn2" type="text" value="0.0"></input><p id="socmb">0.0</p></td>
                 </tr>
             </tbody>
         </table>
