--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -24,11 +24,22 @@
     <nav class="geral">
         <br>
         <h1>Visão Geral</h1>
+        <br>
+        <div id="div1" class="button-container">
+            <button id="bt1" onclick="button1()" style="background-color: rgb(0, 225, 0);" disabled>Ensino Fundamental</button>
+            <button id="bt2" onclick="button2()" style="background-color: rgb(225, 0, 0);">Ensino Médio</button>
+        </div>
+        <br>
+        <div class="button-container">
+            <button onclick="bimestre1()">1º Trimestre</button>
+            <button onclick="bimestre2()">2º Trimestre</button>
+            <button onclick="bimestre3()">3º Trimestre</button>    
+        </div>
         <table>
             <thead>
                 <tr>
                     <th>Disciplina</th>
-                    <th>Porcentagem para Passar de Ano</th>
+                    <th>Porcentagem para Aprovação</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,11 +51,19 @@
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr id="Lbio" style="display: none;">
                     <td>Biologia</td>
                     <td>
                         <div class="progress-container">
                             <div id="bio" class="progress-bar" style="width: 0%;">0%</div>
+                        </div>
+                    </td>
+                </tr>
+                <tr id="Lcie">
+                    <td>Ciências</td>
+                    <td>
+                        <div class="progress-container">
+                            <div id="cie" class="progress-bar" style="width: 0%;">0%</div>
                         </div>
                     </td>
                 </tr>
@@ -56,7 +75,7 @@
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr id="Lfil" style="display: none;">
                     <td>Filosofia</td>
                     <td>
                         <div class="progress-container">
@@ -64,7 +83,7 @@
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr id="Lfis" style="display: none;">
                     <td>Física</td>
                     <td>
                         <div class="progress-container">
@@ -112,7 +131,7 @@
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr id="Lqui" style="display: none;">
                     <td>Química</td>
                     <td>
                         <div class="progress-container">
@@ -120,7 +139,7 @@
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr id="Lsoc" style="display: none;">
                     <td>Sociologia</td>
                     <td>
                         <div class="progress-container">
@@ -130,13 +149,6 @@
                 </tr>
             </tbody>
         </table>
-    </nav>
-
-    <nav id="bimestre" class="bimestre">
-        <h1>Trimestres</h1>
-        <button onclick="bimestre1()">1º Trimestre</button>
-        <button onclick="bimestre2()">2º Trimestre</button>
-        <button onclick="bimestre3()">3º Trimestre</button>
     </nav>
     
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
